--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-paypal-button": "^4.1.1",
     "react-router-dom": "^5.2.0"
   },
@@ -27,6 +28,7 @@
     "@babel/preset-react": "^7.12.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
     "cypress": "^6.0.1",
     "eslint": "^7.15.0",
