--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "https://platzi-store-merch-2c4ca.web.app/",
   "background_color": "#222",
   "theme_color": "#222",
   "display": "standalone"
